fixed button spacing

--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -193,19 +193,19 @@
 
 .scroll2 {
 	// opacity: 0;
-	transform: translateY(50px);
+	// transform: translateY(50px);
 	transition: transform .8s ease-in-out, opacity .8s ease-in-out;
 }
 
 .scroll3 {
 	// opacity: 0;
-	transform: translateY(50px);
+	// transform: translateY(50px);
 	transition: transform 1.1s ease-in-out, opacity 1.1s ease-in-out;
 }
 
 .scroll {
 	// opacity: 0;
-	transform: translateY(50px);
+	// transform: translateY(50px);
 	transition: transform .5s ease-in-out, opacity .5s ease-in-out;
 }
 
